[package]
name = "bitcoin-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = "0.15.0"
tokio = { version = "1", features = ["full"] }
jsonrpsee-core = "0.15.0"
jsonrpsee-http-client = "0.15.0"
jsonrpsee-http-server = "0.15.0"
jsonrpsee-types = "0.15.0"
anyhow = "1.0.58"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2.8"
jsonrpc = "0.13.0"
