[package]
name = "bitcoin-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc = "0.13.0"
async-std = "1.12.0"

[[example]]
name = "example"
path = "examples/example.rs"
