[package]
name = "bitcoind-request"
version = "0.1.13"
edition = "2021"
description = "Query bitcoind"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc = "0.13.0"
async-std = "1.12.0"
# for example
chrono = "0.4"

[[example]]
name = "example"
path = "examples/example.rs"
